--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
 RewriteCond $1 !^(index.php|assets|images|files|public)
-RewriteRule ^(.*)$ /pruebas/index.php?/$1 [L]
+RewriteRule ^(.*)$ /pruebas_v2/index.php?/$1 [L]
